# chess960

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.in  README.md  configure  configure.ac  meson.build  premake5.lua  run.sh
include/: logging.h  piece.h  position.h
src/: Makefile.am  Makefile.in  asset.c  asset.h  board.c  board.h  logging.c  logging.h  main.c  piece.c  piece.h  position.c  position.h  util.c  util.h
